--- a/richeditor/src/main/assets/normalize.css
+++ b/richeditor/src/main/assets/normalize.css
@@ -127,11 +127,12 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline;
+   vertical-align: super; 
 }
 
 sub {
   bottom: -0.25em;
+    vertical-align: sub; // added
 }
 
 sup {
